--- a/nutrition/chapter2.tex
+++ b/nutrition/chapter2.tex
@@ -28,7 +28,7 @@
 
 \paragraph{Узмацняе рызыку іншых хваробаў.}
 Кожны прыём ежы актывуе адмысловыя малекулярныя комплексы mTORС\footnote{Мішэнь рапаміцыну\index{рапаміцын} млекакормячых, mammalian target of rapamycin
-complex (mTORС)~--- фэрмэнт, які грае галоўную ролю ў~клеткавым 
+complex (mTORС)\index{ген!mTOR}~--- фэрмэнт, які грае галоўную ролю ў~клеткавым 
 росьце.~--- \emph{Аўтарская нататка.}} у~нашых клетках. Яго хранічная гіпэрактыўнасьць павялічвае рызыку алергічных і аўтаімунных захворваньняў, падвышанага артэрыяльнага ціску.
 
 \paragraph{Запавольвае самааднаўленьне.}\!
