--- a/nutrition/chapter8.tex
+++ b/nutrition/chapter8.tex
@@ -54,7 +54,7 @@
 Занадта гарачая ежа і напоі пры працяглым выкарыстаньні шкодзяць сьлізьніцы і павялічваюць рызыку апёку і раку рота, гартані і стрававода. А~рэзкая зьмена гарачай і халоднай ежы можа сапсаваць зубную эмаль. Таму паўза перад ядой добрая, каб даць астыць ежы, бясьпечная тэмпэратура~--- 40\,°C і ніжэй.
 
 \paragraph{Халодная вада.}
-Вымыйце рукі, можна і твар, перад дой. Халодная вада зьніжае стрэс, стымулюе тонус вагусу (блукальнае нэрвы). Высокі тонус вагусу, у~сваю чаргу, спрыяе лепшаму страваваньню.
+Вымыйце рукі, можна і твар, перад дой. Халодная вада зьніжае стрэс, стымулюе тонус вагусу (блукальнае нэрвы)\index{вагус (блукальны нэрв)}. Высокі тонус вагусу\index{вагус (блукальны нэрв)}, у~сваю чаргу, спрыяе лепшаму страваваньню.
 
 \paragraph{Дыхайце.}
 Дыхальныя практыкаваньні дапамагаюць супакоіцца і паслабіцца. Некалькі глыбокіх выдыхаў зь невялікай затрымкай на выдыху дапамогуць вам. Можна выкарыстоўваць адмысловы дадатак на смартфоне.
