--- a/nutrition/chapter9.tex
+++ b/nutrition/chapter9.tex
@@ -16,10 +16,10 @@
 Ёсьць выразная ўзаемасувязь паміж тым, як хутка вы ясьцё, і тым, як хутка набіраеце вагу. Дасьледаваньні паказваюць, што вага тых, хто есьць хутка, перавышае сярэдні паказьнік на 4 кіляграмы, а~вага тых, хто есьць павольна, складае на 3 кіляграмы менш за сярэдні паказьнік. Рызыка атлусьценьня падвойваецца! Рэч у~тым, што павольнае харчаваньне дапамагае сыстэме «голад-насычэньне» спрацаваць лепш і насыціцца раней. Мозгу для вызначэньня сытасьці патрэбны час. Так, запаволеньне працэсу адразу прывядзе да таго, што вы зьясцё на 88\,ккал менш у~кожны прыём ежы. А~цягам года гэта прывядзе да страты да 10 кіляграмаў нават бязь зьмены рацыёну!
 
 \paragraph{Перажоўваньне.}
-Недастатковае перажоўваньне~--- важная праблема фастфуду. Сёньня мы ўжываем усё больш здробненай, гатовай ежы~--- катлеты замест мяса, смузі замест садавіны, пюрэ замест цэльнай гародніны і т.~п. Дбайнае перажоўваньне ежы важнае для стымуляваньня мясцовага сьлізістага імунітэту, здароўя зубоў, фармаваньня тварнага шкілета ў~дзяцей, лепшага насычэньня і кантролю голаду, яно станоўча ўплывае на мозг і на стрэсаўстойлівасьць. Больш за тое, зьмяншаецца актыўнасьць стрэсавай восі, паляпшаецца мазгавы крывацёк, адбываецца стымуляцыя актыўнага мысьленьня, прэфрантальнай кары, паляпшаецца работа памяці і нэўрагенэз, зьмяншаецца рызыка нэўрадэгенэратыўных разладаў. Надмер мяккай здрабнёнай ежы зьніжае вашу стрэсаўстойлівасьць і здароўе зубоў. Чым больш інтэнсіўнае перажоўваньне, тым больш зьніжаецца ўзровень картызолу і адрэналіну. Так, стараннае перажоўваньне зьніжае ўзровень картызолу на 26\,\% за 20 хвілінаў.
+Недастатковае перажоўваньне~--- важная праблема фастфуду. Сёньня мы ўжываем усё больш здробненай, гатовай ежы~--- катлеты замест мяса, смузі замест садавіны, пюрэ замест цэльнай гародніны і т.~п. Дбайнае перажоўваньне ежы важнае для стымуляваньня мясцовага сьлізістага імунітэту, здароўя зубоў, фармаваньня тварнага шкілета ў~дзяцей, лепшага насычэньня і кантролю голаду, яно станоўча ўплывае на мозг і на стрэсаўстойлівасьць. Больш за тое, зьмяншаецца актыўнасьць стрэсавай восі, паляпшаецца мазгавы крывацёк, адбываецца стымуляцыя актыўнага мысьленьня, прэфрантальнай кары, паляпшаецца работа памяці і нэўрагенэз\index{нэўрагенэз}, зьмяншаецца рызыка нэўрадэгенэратыўных разладаў. Надмер мяккай здрабнёнай ежы зьніжае вашу стрэсаўстойлівасьць і здароўе зубоў. Чым больш інтэнсіўнае перажоўваньне, тым больш зьніжаецца ўзровень картызолу\index{картызол} і адрэналіну. Так, стараннае перажоўваньне зьніжае ўзровень картызолу\index{картызол} на 26\,\% за 20 хвілінаў.
 
 \paragraph{Іншыя праблемы.}
-Хуткае харчаваньне павялічвае рызыку разьвіцьця цукровага дыябэту і зьяўленьня пякоткі больш чым у~два разы, таксама павялічваецца рызыка разьвіцьця артэрыяльнай гіпэртэнзіі. Часта хуткая яда і прагнае глытаньне прыводзяць да заглынаньня паветра, якое потым выклікае дыскамфорт у~страўніку. У~цэлым павольная яда зьмяншае дыскамфорт нават пасьля багатага прыёму ежы. Цікава, што тыя, хто есьць павольна, менш ужываюць солі. Імаверна, гэта зьвязана з~тым, што яны атрымліваюць нашмат больш задавальненьня ад ежы, таму не імкнуцца кампэнсаваць задавальненьне сольлю ці павелічэньнем порцый.
+Хуткае харчаваньне павялічвае рызыку разьвіцьця цукровага дыябэту\index{дыябэт} і зьяўленьня пякоткі больш чым у~два разы, таксама павялічваецца рызыка разьвіцьця артэрыяльнай гіпэртэнзіі. Часта хуткая яда і прагнае глытаньне прыводзяць да заглынаньня паветра, якое потым выклікае дыскамфорт у~страўніку. У~цэлым павольная яда зьмяншае дыскамфорт нават пасьля багатага прыёму ежы. Цікава, што тыя, хто есьць павольна, менш ужываюць солі. Імаверна, гэта зьвязана з~тым, што яны атрымліваюць нашмат больш задавальненьня ад ежы, таму не імкнуцца кампэнсаваць задавальненьне сольлю ці павелічэньнем порцый.
 
 \paragraph{Культура харчаваньня.}
 У дзяцей яда на самоце павялічвае рызыку парушэньняў харчовых паводзінаў у~будучыні. Так, дзеці, якія мінімум двойчы на дзень сілкуюцца асобна ад бацькоў, маюць рызыку атлусьценьня на 40\,\% больш. Дзеці, якія ядуць зь сям'ёй больш за 5 разоў на тыдзень, маюць меншую рызыку парушэньняў харчовых паводзінаў, ядуць больш здаровую ежу і лепш вучацца. Чым большая колькасьць сямейных абедаў, тым большую колькасьць гародніны ядуць людзі.
@@ -41,12 +41,12 @@
 Чыстыя прамежкі, паўзы пры перажоўваньні паміж асобнымі адкушанымі кавалачкамі дапамагаюць нам супрацьстаяць аўтаматычнаму жаваньню. Вы можаце спытаць сябе цягам гэтых паўзаў, ці хочаце вы зьесьці яшчэ кавалачак. Магчыма, вы хочаце зьесьці нешта іншае? Вы можаце пагутарыць у~гэтыя паўзы, агледзецца па баках, адпачыць. Звыкайце да сэрыі невялікіх паўзаў, абавязкова робячы іх паміж рознымі стравамі.
 
 \paragraph{Датрымоўвайцеся парадку страваў.}
-Розныя нутрыенты па-рознаму ўплываюць на выпрацоўку асаблівага гармону GLP-1. Гэтае злучэньне запавольвае апаражненьне страўніка, зьмяншае ўзровень саляной кіслаты. Запаволеньне апаражненьня страўніка зьвязанае зь лепшым насычэньнем, бо ежа пазьней паступае ў~тонкі кішачнік, які ўсмоктвае неабходныя арганізму рэчывы. Чым павольней працякаюць гэтыя працэсы, тым меншая імавернасьць празьмернага падвышэньня глюкозы ў~крыві пасьля яды. Занадта высокі ўзровень глюкозы пасьля прыёму ежы зьяўляецца раньняй прыкметай дыябэту, ён таксама можа сустракацца і ў~здаровых людзей, узмацняючы выяўленасьць глікацыі, аксыдантнага стрэсу і падвышаючы рызыку сардэчна-сасудзістых хвароб. Дасьледаваньні давялі, што гародніна, бялок і тлушч, якія зьядаюцца ў~пачатку сталаваньня, могуць зьменшыць уздым глюкозы ад вугляводнай ежы. Навукоўцы вывучылі пасьлядоўнасьць прыёму прадуктаў: рыс~--- рыба, рыба~--- рыс, мяса~--- рыс, рыс~--- мяса (прапорцыі і каляраж аднолькавыя).
+Розныя нутрыенты па-рознаму ўплываюць на выпрацоўку асаблівага гармону GLP-1\index{гармон!GLP-1}. Гэтае злучэньне запавольвае апаражненьне страўніка, зьмяншае ўзровень саляной кіслаты. Запаволеньне апаражненьня страўніка зьвязанае зь лепшым насычэньнем, бо ежа пазьней паступае ў~тонкі кішачнік, які ўсмоктвае неабходныя арганізму рэчывы. Чым павольней працякаюць гэтыя працэсы, тым меншая імавернасьць празьмернага падвышэньня глюкозы ў~крыві пасьля яды. Занадта высокі ўзровень глюкозы пасьля прыёму ежы зьяўляецца раньняй прыкметай дыябэту\index{дыябэт}, ён таксама можа сустракацца і ў~здаровых людзей, узмацняючы выяўленасьць глікацыі, аксыдантнага стрэсу і падвышаючы рызыку сардэчна-сасудзістых хвароб. Дасьледаваньні давялі, што гародніна, бялок і тлушч, якія зьядаюцца ў~пачатку сталаваньня, могуць зьменшыць уздым глюкозы ад вугляводнай ежы. Навукоўцы вывучылі пасьлядоўнасьць прыёму прадуктаў: рыс~--- рыба, рыба~--- рыс, мяса~--- рыс, рыс~--- мяса (прапорцыі і каляраж аднолькавыя).
 
-Аказалася, што прыём рыбы ці мяса ў~першую чаргу прыводзіць да большага насычэньня, запавольвае эвакуацыю са страўніка, спрыяе меншаму павышэньню ўзроўню глюкозы, глікеміі і больш высокай выпрацоўцы гармону GLP-1 як у~дыябэтыкаў, так і ў~здаровых удзельнікаў дасьледаваньня! Пачынаючы сталаваньне зь бялковых і тлустых прадуктаў, зеляніны і гародніны, багатых клятчаткай, мы ўзмацняем выпрацоўку GLP-1. Яны хутчэй насычаюць і памяншаюць дзеяньне вугляводаў. Ідэальны парадак страў: салата зь зелянінай і гароднінай (можна з~аліўкавым алеем), затым бялковая ежа, і толькі пасьля~--- больш шчыльныя вугляводы або садавіна. Такая пасьлядоўнасьць страў дае лепшы глікемічны кантроль.
+Аказалася, што прыём рыбы ці мяса ў~першую чаргу прыводзіць да большага насычэньня, запавольвае эвакуацыю са страўніка, спрыяе меншаму павышэньню ўзроўню глюкозы, глікеміі і больш высокай выпрацоўцы гармону GLP-1\index{гармон!GLP-1} як у~дыябэтыкаў, так і ў~здаровых удзельнікаў дасьледаваньня! Пачынаючы сталаваньне зь бялковых і тлустых прадуктаў, зеляніны і гародніны, багатых клятчаткай, мы ўзмацняем выпрацоўку GLP-1\index{гармон!GLP-1}. Яны хутчэй насычаюць і памяншаюць дзеяньне вугляводаў. Ідэальны парадак страў: салата зь зелянінай і гароднінай (можна з~аліўкавым алеем), затым бялковая ежа, і толькі пасьля~--- больш шчыльныя вугляводы або садавіна. Такая пасьлядоўнасьць страў дае лепшы глікемічны кантроль.
 
 \paragraph{Кампанія.}
-Для чалавека натуральна і карысна есьці ў~кампаніі. Пачынаючы зь евангельскага «праламленьня хлеба» і заканчваючы дадзенымі навуковых дасьледаваньняў, вядома, што адзінота павялічвае выпрацоўку грэліну, а~вось кампанія, наадварот, стымулюе выпрацоўку антыстрэсавага гармону аксытацыну, які стымулюе блукальную нэрву, паляпшаючы насычэньне. Самая прыемная ежа тая, якую дзеліш з~прыемнымі табе людзьмі.
+Для чалавека натуральна і карысна есьці ў~кампаніі. Пачынаючы зь евангельскага «праламленьня хлеба» і заканчваючы дадзенымі навуковых дасьледаваньняў, вядома, што адзінота павялічвае выпрацоўку грэліну, а~вось кампанія, наадварот, стымулюе выпрацоўку антыстрэсавага гармону аксытацыну\index{аксытацын}, які стымулюе блукальную нэрву, паляпшаючы насычэньне. Самая прыемная ежа тая, якую дзеліш з~прыемнымі табе людзьмі.
 
 \subsection{Як трымацца правіла? Ідэі і парады}
 
