--- a/nutrition/chapter12.tex
+++ b/nutrition/chapter12.tex
@@ -6,7 +6,7 @@
 
 Уявіце сабе, што вы плывяце на лодцы пасярод акіяну. Вы ня ўмееце плаваць, ня ўмееце ныраць і вымушаныя чапляцца за лядашчы чаўначок. А~вось навык плаваць і ныраць адразу пашырыць вашыя магчымасьці і прыстасоўвальнасьць, зробіць больш гнуткім. Лодачка~--- гэта вугляводы, а~ўменьне плаваць~--- тлушчы. Калі мы кепска спальваем тлушчы, то становімся меней адаптыўнымі. А~мэтабалічная гнуткасьць~--- гэта магчымасьць добра пачувацца і ў~лодцы, і ў~вадзе, і з~вугляводамі, і з~тлушчамі.
 
-Цыркадная сынхранізацыя~--- гэта сумяшчэньне свайго рэжыму харчаваньня з~рэжымам дня. Содневыя (цыркадныя) рытмы кіруюцца шэрагам унутраных гадзіньнікаў арганізму (стветлавыя, тэмпэратурныя, харчовыя і да т.~п.). Калі ўсе гэтыя гадзіньнікі паказваюць розны час, то гэта зьбівае наш арганізм~--- і зьяўляюцца праблемы. Вельмі важна сябе сынхранізаваць, для гэтага правільна заводзіце ўсе нашы ўнутраныя гадзіньнікі кожны дзень!
+Цыркадная сынхранізацыя\index{цыркадныя рытмы}~--- гэта сумяшчэньне свайго рэжыму харчаваньня з~рэжымам дня. Содневыя (цыркадныя) рытмы\index{цыркадныя рытмы} кіруюцца шэрагам унутраных гадзіньнікаў арганізму (стветлавыя, тэмпэратурныя, харчовыя і да т.~п.). Калі ўсе гэтыя гадзіньнікі паказваюць розны час, то гэта зьбівае наш арганізм~--- і зьяўляюцца праблемы. Вельмі важна сябе сынхранізаваць, для гэтага правільна заводзіце ўсе нашы ўнутраныя гадзіньнікі кожны дзень!
 
 \tipbox{Мэтабалічная «жорсткасьць»~--- гэта немагчымасьць (ці абмежаваньне магчымасьці) паўнавартаснага пераключэньня з~адной крыніцы энэргіі на іншую, звычайна гэта парушэньне спальваньня тлушчаў. Пры жорсткасьці наш арганізм горш рэагуе на зьмены харчаваньня і трэніроўкі, мы адчуваем хранічную стомленасьць.}
 
@@ -15,14 +15,14 @@
 \paragraph{Паляўнічыя-зьбіральнікі.}
 Традыцыйна садавіна, клубні, мёд былі даступныя абмежаваны час цягам году, паляваньне таксама было пасьпяховым не заўсёды, а~эпізадычна. Таму ў~нашых продкаў чаргаваліся пэрыяды «вугляводы~--- не вугляводы» (тлушч і бялок). Цяпер мы ямо шмат тлушчу, бялку і вугляводаў, у~тым ліку цукар, адначасова ў~адным прыёме ежы. Такія спалучэньні, як тлушч з~цукрам, асабліва небясьпечныя для нашага апэтыту і мэтабалізму. Частыя прыёмы ежы і пераяданьне пагаршаюць праблему.
 
-\paragraph{Гіпадынамія.}
-Навукоўцы называюць сядзеньне паводле ўплыву на здароўе «новым курэньнем». Чым даўжэй мы сядзім, тым больш растуць рызыкі захворваньняў і раньняй сьмерці, тым ніжэй становіцца адчувальнасьць да інсуліну. Нізкаінтэнсіўная актыўнасьць~--- гэта ўсё, што вы робіце, калі не сядзіце і не ляжыце, яе нам у~жыцьці вельмі не хапае. Сакрэт жыцьця доўгажыхароў ня ў~спорце, а~ў пастаяннай рухальнай актыўнасьці на працягу ўсяго дня.
+\paragraph{Гіпадынамія\index{гіпадынамія}.}
+Навукоўцы называюць сядзеньне паводле ўплыву на здароўе «новым курэньнем». Чым даўжэй мы сядзім, тым больш растуць рызыкі захворваньняў і раньняй сьмерці, тым ніжэй становіцца адчувальнасьць да інсуліну\index{інсулін}. Нізкаінтэнсіўная актыўнасьць~--- гэта ўсё, што вы робіце, калі не сядзіце і не ляжыце, яе нам у~жыцьці вельмі не хапае. Сакрэт жыцьця доўгажыхароў ня ў~спорце, а~ў пастаяннай рухальнай актыўнасьці на працягу ўсяго дня.
 
 \paragraph{Стрэс.}
-Акрамя эпідэміі сядзячага ладу жыцьця мы сутыкаемся з~эпідэміяй стрэсу. Непрадказальнасьць нашага жыцьця, надмер інфармацыі, нявызначанасьць прымушаюць больш перажываць. Наша цела кепска трывае падвышаныя ўзроўні картызолу і рэагуе на хранічны стрэс старажытным спосабам~--- узмацненьнем апэтыту і запасаньнем тлушчу «на чорны дзень». Антыстрэсавая праграма~--- гэта абавязковы кампанэнт у~нармалізацыі харчаваньня. Стрэс~--- гэта ня толькі праблемы на працы, але і такія незаўважныя фактары, як начны шум. Навукоўцы лічаць, што «шумавое забруджваньне» вельмі шкодна ўплывае на наш арганізм.
+Акрамя эпідэміі сядзячага ладу жыцьця мы сутыкаемся з~эпідэміяй стрэсу. Непрадказальнасьць нашага жыцьця, надмер інфармацыі, нявызначанасьць прымушаюць больш перажываць. Наша цела кепска трывае падвышаныя ўзроўні картызолу\index{картызол} і рэагуе на хранічны стрэс старажытным спосабам~--- узмацненьнем апэтыту і запасаньнем тлушчу «на чорны дзень». Антыстрэсавая праграма~--- гэта абавязковы кампанэнт у~нармалізацыі харчаваньня. Стрэс~--- гэта ня толькі праблемы на працы, але і такія незаўважныя фактары, як начны шум. Навукоўцы лічаць, што «шумавое забруджваньне» вельмі шкодна ўплывае на наш арганізм.
 
 \paragraph{Сьвятло.}
-Лішак яркага сьвятла ўвечары зьбівае нашыя біярытмы, павялічвае апэтыт увечары. Пры парушаным цыркадным рытме тлушчаспальваньне прыгнятаецца і клеткі часьцей выкарыстоўваюць глюкозу. У~экспэрымэнтах чым ярчэй у~спальні, тым больш лішніх кіляграмаў! Навукоўцы кажуць пра сьветлавое забруджваньне, якое можа ўзмацняць шэраг захворваньняў, уключаючы пухлінныя.
+Лішак яркага сьвятла ўвечары зьбівае нашыя біярытмы, павялічвае апэтыт увечары. Пры парушаным цыркадным рытме\index{цыркадныя рытмы} тлушчаспальваньне прыгнятаецца і клеткі часьцей выкарыстоўваюць глюкозу. У~экспэрымэнтах чым ярчэй у~спальні, тым больш лішніх кіляграмаў! Навукоўцы кажуць пра сьветлавое забруджваньне, якое можа ўзмацняць шэраг захворваньняў, уключаючы пухлінныя.
 
 \tipbox{Антыстрэсавая праграма~--- гэта абавязковы кампанэнт у~нармалізацыі харчаваньня. Стрэс~--- гэта ня толькі праблемы на працы, але і такія фактары, як начны шум. Шумавое забруджваньне вельмі згубна ўплывае на наш арганізм.}
 
@@ -33,24 +33,24 @@
 
 Сымптомы мэтабалічнай жорсткасьці разнастайныя: вы санлівыя пасьля прыёму вугляводаў, вам цяжка трываць прамежкі больш за 4--5 гадзінаў бязь ежы, вам хочацца перакусваць для падтрымкі самаадчуваньня, падчас посту вы страчваеце цягліцы, а~ня тлушч, вам цяжка функцыянаваць без кафеіну (нізкі ўзровень энэргіі). Мэтабалічная жорсткасьць прыводзіць да таго, што, калі ў~вас зьніжаецца ўзровень глюкозы ў~крыві, вы адразу адчуваеце стомленасьць і слабасьць, расшчапленьне тлушчаў не ўключаецца. Людзі з~мэтабалічнай жорсткасьцю ў~стане спакою атрымліваюць нашмат менш энэргіі з~тлушчаў.
 
-Пры мэтабалічнай жорсткасьці ўзьнікаюць праблемы як з~тлушчамі, так і з~глюкозай (два бакі аднаго медаля~--- мэтабалізму). Праблемы з~глюкозай зьвязаныя з~тым, што клеткі ня могуць эфэктыўна паглынаць і спальваць глюкозу (інсулінарэзыстэнтнасьць), праблема з~тлушчам выяўляецца як парушэньні акісьленьня тлушчаў (мітахондрыі цягліцаў) і павышэньне ўзроўню свабоднай тлустай кіслаты (ліпатаксічнасьць).
+Пры мэтабалічнай жорсткасьці ўзьнікаюць праблемы як з~тлушчамі, так і з~глюкозай (два бакі аднаго медаля~--- мэтабалізму). Праблемы з~глюкозай зьвязаныя з~тым, што клеткі ня могуць эфэктыўна паглынаць і спальваць глюкозу (інсулінарэзыстэнтнасьць\index{інсулінарэзыстэнтнасьць}), праблема з~тлушчам выяўляецца як парушэньні акісьленьня тлушчаў (мітахондрыі\index{мітахондрыі} цягліцаў) і павышэньне ўзроўню свабоднай тлустай кіслаты (ліпатаксічнасьць).
 
 \paragraph{Мітахондрыі.}
-Пры мэтабалічнай жорсткасьці вельмі цярпяць мітахондрыі (гэта своеасаблівыя электрастанцыі клетак, якія выпрацоўваюць энэргію з~паліва). Калі зашмат і тлушчаў, і вугляводаў, то мітахондрыі «перагружаюцца», шляхі іх акісьленьня могуць нэгатыўна ўплываць адзін на аднаго. Людзі зь нізкай мэтабалічнай гнуткасьцю маюць менш мітахондрыяў у~цягліцах і спальваюць мала тлушчу, пры гэтым нават тыя нешматлікія мітахондрыі працуюць кепска, схільныя да большага акісьляльнаму стрэсу і падчас працы даюць вялікую ўцечку актыўных формаў кіслароду. А~аксыдантны стрэс пашкоджвае клеткавыя структуры. Добрыя мітахондрыі~--- даўжэйшае жыцьцё. Калі мітахондрыі эфэктыўна спальваюць тлушч, то пры гэтым утвараецца менш актыўных формаў кіслароду і менш пашкоджваюцца клеткі. Гэта можа спрыяць запаволеньню старэньня і нават павялічваць працягласьць жыцьця.
+Пры мэтабалічнай жорсткасьці вельмі цярпяць мітахондрыі\index{мітахондрыі} (гэта своеасаблівыя электрастанцыі клетак, якія выпрацоўваюць энэргію з~паліва). Калі зашмат і тлушчаў, і вугляводаў, то мітахондрыі\index{мітахондрыі} «перагружаюцца», шляхі іх акісьленьня могуць нэгатыўна ўплываць адзін на аднаго. Людзі зь нізкай мэтабалічнай гнуткасьцю маюць менш мітахондрыяў у~цягліцах і спальваюць мала тлушчу, пры гэтым нават тыя нешматлікія мітахондрыі працуюць кепска, схільныя да большага акісьляльнаму стрэсу і падчас працы даюць вялікую ўцечку актыўных формаў кіслароду. А~аксыдантны стрэс пашкоджвае клеткавыя структуры. Добрыя мітахондрыі~--- даўжэйшае жыцьцё. Калі мітахондрыі\index{мітахондрыі} эфэктыўна спальваюць тлушч, то пры гэтым утвараецца менш актыўных формаў кіслароду і менш пашкоджваюцца клеткі. Гэта можа спрыяць запаволеньню старэньня і нават павялічваць працягласьць жыцьця.
 
 \tipbox{Насуперак мітам, нашаму мозгу не патрабуецца сталае падсілкоўваньне глюкозай. Наадварот, яна можа прывесьці да ваганьня ўзроўню цукру, што нэгатыўна паўплывае на нашыя разумовыя здольнасьці, прывядзе да раздражняльнасьці і агрэсіўнасьці.}
 
-\paragraph{Інсулін.}
-Пры перагрузцы калёрыямі ўзьнікае рэзыстэнтнасьць да інсуліну. Пры падвышаным узроўні інсуліну блякуецца расшчапленьне глікагену і тлушчу, а~вось назапашваньне тлушчу толькі павялічваецца, роўна як і затрымка вадкасьці. Рэзыстэнтнасьць да інсуліну~--- гэта прычына разьвіцьця многіх захворваньняў.
+\paragraph{Інсулін\index{інсулін}.}
+Пры перагрузцы калёрыямі ўзьнікае рэзыстэнтнасьць да інсуліну\index{інсулін}. Пры падвышаным узроўні інсуліну блякуецца расшчапленьне глікагену\index{глікаген} і тлушчу, а~вось назапашваньне тлушчу толькі павялічваецца, роўна як і затрымка вадкасьці. Рэзыстэнтнасьць да інсуліну\index{інсулін}~--- гэта прычына разьвіцьця многіх захворваньняў.
 
 \paragraph{Фігура і харчаваньне.}
-Чым вышэйшая гнуткасьць, тым лягчэй мы можам засвойваць як тлушчы, так і вугляводы. Пастаяннае спажываньне вугляводаў зьніжае адчувальнасьць да інсуліну, яго ўзровень павышаецца, і гэта запавольвае тлушчаспальваньне. А~высокая мэтабалічная гнуткасьць дазваляе лягчэй вытрымліваць пост без пачуцьця голаду, што палягчае пахуданьне. Калі вы лёгка спальваеце і тлушчы, і вугляводы, тыя вы зможаце падтрымліваць добрую постаць доўгі час, не знаходзячыся на цьвёрдай дыеце.
+Чым вышэйшая гнуткасьць, тым лягчэй мы можам засвойваць як тлушчы, так і вугляводы. Пастаяннае спажываньне вугляводаў зьніжае адчувальнасьць да інсуліну\index{інсулін}, яго ўзровень павышаецца, і гэта запавольвае тлушчаспальваньне. А~высокая мэтабалічная гнуткасьць дазваляе лягчэй вытрымліваць пост без пачуцьця голаду, што палягчае пахуданьне. Калі вы лёгка спальваеце і тлушчы, і вугляводы, тыя вы зможаце падтрымліваць добрую постаць доўгі час, не знаходзячыся на цьвёрдай дыеце.
 
 \paragraph{Паляпшаецца сон.}
 Сон і спаленьне тлушчу шчыльна зьвязаныя між сабой. Увечары працэс тлушчаспаленьня ўзмацняецца, што дазваляе ўначы нам не прачынацца, каб паесьці. Узровень глюкозы падае, гэта прыводзіць да павелічэньня выкіду гармону росту і гармонаў шчытавіцы, што таксама спрыяе тлушчаспаленьню. І~ўсе гэтыя працэсы спрыяюць глыбокаму аднаўленчаму сну. Калі спаленьне тлушчу парушана, то сон становіцца менш глыбокім, гэта выклікае частыя абуджэньні і фрагмэнтацыю сну.
 
 \paragraph{Стабільны настрой.}
-Насуперак мітам, нашаму мозгу не патрабуецца сталае падсілкоўваньне глюкозай. Наадварот, яна можа прывесьці да ваганьня ўзроўню цукру, што нэгатыўна ўплывае на нашыя разумовыя здольнасьці, вядзе да раздражняльнасьці і агрэсіўнасьці. Нават калі прыкметна абмежаваць колькасьць вугляводаў, усё роўна мозгу хопіць глюкозы, ён атрымае яе з~глікагену печані. Лішак вугляводаў і нізкая адчувальнасьць да інсуліну павялічваюць рызыку хваробы Альцгеймэра, якую навукоўцы называюць дыябэтам мозгу.
+Насуперак мітам, нашаму мозгу не патрабуецца сталае падсілкоўваньне глюкозай. Наадварот, яна можа прывесьці да ваганьня ўзроўню цукру, што нэгатыўна ўплывае на нашыя разумовыя здольнасьці, вядзе да раздражняльнасьці і агрэсіўнасьці. Нават калі прыкметна абмежаваць колькасьць вугляводаў, усё роўна мозгу хопіць глюкозы, ён атрымае яе з~глікагену\index{глікаген} печані. Лішак вугляводаў і нізкая адчувальнасьць да інсуліну\index{інсулін} павялічваюць рызыку хваробы Альцгеймэра\index{хвароба!Альцгеймэра}, якую навукоўцы называюць дыябэтам мозгу.
 
 \subsection{Асноўныя прынцыпы}
 
@@ -59,14 +59,14 @@
 \paragraph{Рэжым харчаваньня} (чаргаваньне «ем шмат»~--- «ня ем, ем мала»).
 Гэты вэктар падрабязна апісаны ў~папярэдніх разьдзелах, ад інтэрвалаў і скарачэньня харчовага вакна да розных формаў посту.
 
-\paragraph{Вар'іраваньне макранутрыентаў} (чаргаваньне «вугляводы»~--- «бялкі, тлушчы»).
-Як я ўжо пісаў, для нашых продкаў было характэрна паасобнае паступленьне нутрыентаў. Зьбіральніцтва давала расьлінныя вугляводныя прадукты, а~паляваньне прыносіла бялкі і тлушчы. Умеранае вар'іраваньне макранутрыентаў на працягу тыдня дапаможа вам аптымальней падтрымліваць мэтабалічную гнуткасьць. Гэта значыць, што лепей зьесьці больш мяса зь зялёнай салатай без гарніру кшталту рысу, а~калі вы ясьцё порцыю грэчкі, дык лепей дадаць гародніну, зеляніну і закрасы, а~не катлету.
-Гіпадынамія ўзмацняе мэтабалічную жорсткасьць, таму больш працы пераносьце на ногі~--- працуйце стоячы, гаварыце па тэлефоне стоячы, хадзіце ў~перапынках. Шматгадзіннае сядзеньне не кампэнсуецца гадзінай трэніроўкі!
+\paragraph{Вар'іраваньне макранутрыентаў\index{макранутрыенты}} (чаргаваньне «вугляводы»~--- «бялкі, тлушчы»).
+Як я ўжо пісаў, для нашых продкаў было характэрна паасобнае паступленьне нутрыентаў. Зьбіральніцтва давала расьлінныя вугляводныя прадукты, а~паляваньне прыносіла бялкі і тлушчы. Умеранае вар'іраваньне макранутрыентаў\index{макранутрыенты} на працягу тыдня дапаможа вам аптымальней падтрымліваць мэтабалічную гнуткасьць. Гэта значыць, што лепей зьесьці больш мяса зь зялёнай салатай без гарніру кшталту рысу, а~калі вы ясьцё порцыю грэчкі, дык лепей дадаць гародніну, зеляніну і закрасы, а~не катлету.
+Гіпадынамія\index{гіпадынамія} ўзмацняе мэтабалічную жорсткасьць, таму больш працы пераносьце на ногі~--- працуйце стоячы, гаварыце па тэлефоне стоячы, хадзіце ў~перапынках. Шматгадзіннае сядзеньне не кампэнсуецца гадзінай трэніроўкі!
 
 \paragraph{Віды фізычнай актыўнасьці} (чаргаваньне «высокаінтэнсіўная»~--- «нізкаінтэнсіўная» актыўнасьць).
-Фізычная актыўнасьць вельмі важная для падтрымкі мэтабалічнай гнуткасьці. Кажучы проста, чым больш цягліцаў, тым вышэйшая мэтабалічная гнуткасьць. Наша цяглічная тканка запасіць глікаген, спальвае тлушчы і вугляводы, розныя тыпы валокнаў цяглічнай тканкі маюць дачыненьне да розных субстратаў. А~добрая адчувальнасьць цяглічнай тканкі да інсуліну важная для падтрымкі гнуткасьці.
+Фізычная актыўнасьць вельмі важная для падтрымкі мэтабалічнай гнуткасьці. Кажучы проста, чым больш цягліцаў, тым вышэйшая мэтабалічная гнуткасьць. Наша цяглічная тканка запасіць глікаген\index{глікаген}, спальвае тлушчы і вугляводы, розныя тыпы валокнаў цяглічнай тканкі маюць дачыненьне да розных субстратаў. А~добрая адчувальнасьць цяглічнай тканкі да інсуліну\index{інсулін} важная для падтрымкі гнуткасьці.
 
-Важна памятаць, што на трэніроўкі мы трацім малую частку энэргіі, а~вось паўсядзённая нізкаінтэнсіўная дзейнасьць адбірае ў~3--4 разы больш калёрыяў! Таму базісам зьяўляецца пастаянная нізкаінтэнсіўная рухальная актыўнасьць, зьніжэньне часу сядзеньня! Гіпадынамія ўзмацняе мэтабалічную жорсткасьць, таму больш працы пераносьце на ногі: працуйце стоячы, размаўляйце па тэлефоне стоячы, хадзіце ў~перапынках. Шматгадзіннае сядзеньне не кампэнсуецца гадзінай трэніроўкі! Нізкаінтэнсіўная фізычная актыўнасьць~--- гэта аснова рухальнай піраміды, яе сярэдні ўзровень~--- гэта сярэднеінтэнсіўная актыўнасьць (гульнявыя віды спорту, танцы, кардыё, бег, ровар і да т.~п. 45 хвілінаў аэробных практыкаваньняў умеранай інтэнсіўнасьці 3--5 разоў на тыдзень або 30 хвілінаў умеранай інтэнсіўнасьці), а~на вяршыні піраміды~--- высокаінтэнсіўная кароткатэрміновая актыўнасьць (спрынт, кросфіт, сілавыя і да т.~п. 1--3 гадзіны на тыдзень).
+Важна памятаць, што на трэніроўкі мы трацім малую частку энэргіі, а~вось паўсядзённая нізкаінтэнсіўная дзейнасьць адбірае ў~3--4 разы больш калёрыяў! Таму базісам зьяўляецца пастаянная нізкаінтэнсіўная рухальная актыўнасьць, зьніжэньне часу сядзеньня! Гіпадынамія\index{гіпадынамія} ўзмацняе мэтабалічную жорсткасьць, таму больш працы пераносьце на ногі: працуйце стоячы, размаўляйце па тэлефоне стоячы, хадзіце ў~перапынках. Шматгадзіннае сядзеньне не кампэнсуецца гадзінай трэніроўкі! Нізкаінтэнсіўная фізычная актыўнасьць~--- гэта аснова рухальнай піраміды, яе сярэдні ўзровень~--- гэта сярэднеінтэнсіўная актыўнасьць (гульнявыя віды спорту, танцы, кардыё, бег, ровар і да т.~п. 45 хвілінаў аэробных практыкаваньняў умеранай інтэнсіўнасьці 3--5 разоў на тыдзень або 30 хвілінаў умеранай інтэнсіўнасьці), а~на вяршыні піраміды~--- высокаінтэнсіўная кароткатэрміновая актыўнасьць (спрынт, кросфіт, сілавыя і да т.~п. 1--3 гадзіны на тыдзень).
 
 \subsection{Спалучэньне фізычнай актыўнасьці ды іншых вэктараў}
 
@@ -74,23 +74,23 @@
 Больш калёрыяў у~дні інтэнсіўных трэніровак. Калі менш фізычнай актыўнасьці~--- то і менш калёрыяў (прыёмаў ежы). Больш нізкаінтэнсіўнай актыўнасьці пры малой колькасьці вугляводаў (і высокім тлушчаў). Больш вугляводаў пры большай высокаінтэнсіўнай фізычнай актыўнасьці. Падвышаны ўзровень трэніровак абавязкова трэба кампэнсаваць павелічэньнем калярыйнасьці, прынцып «менш ясі~--- больш трэніруесься» небясьпечны для здароўя!
 
 \paragraph{Час дня.}
-Для прасунутай групы дапушчальныя кароткія трэніроўкі на пусты страўнік для спаленьня тлушчу (мала глікагену ў~печані, высокі картызол). А~вось для набору цягліцаў лепей выбіраць час увечары, трэніруючыся пасьля апошняга прыёму ежы (нізкі картызол, высокі гармон росту без дэфіцыту калёрыяў). Інтэнсіўныя сілавыя трэніроўкі на пусты страўнік не рэкамэндуюцца!
+Для прасунутай групы дапушчальныя кароткія трэніроўкі на пусты страўнік для спаленьня тлушчу (мала глікагену\index{глікаген} ў~печані, высокі картызол\index{картызол}). А~вось для набору цягліцаў лепей выбіраць час увечары, трэніруючыся пасьля апошняга прыёму ежы (нізкі картызол\index{картызол}, высокі гармон росту без дэфіцыту калёрыяў). Інтэнсіўныя сілавыя трэніроўкі на пусты страўнік не рэкамэндуюцца!
 
 \paragraph{Стрэс.}
 Максымум нагрузкі даваць у~дні рэфідаў і пры малым узроўні фізычнага і псыхалягічнага стрэсу, у~дні мінімальнай стомленасьці. Мінімум нагрузкі~--- у~дні стрэсу, стомленасьці або харчовага ўстрыманьня (посту).
 
 \paragraph{Рэжым актыўнасьці і адпачынак} (чаргаваньне «стрэс»~--- «сон, адпачынак»).
-Для аптымальнага здароўя нам трэба больш карысных вострых стрэсаў, зьніжэньне ўзроўню хранічнага стрэсу і дастатковае аднаўленьне (рэляксацыя, адпачынак, сон). Востры карысны стрэс можа паляпшаць тлушчаспаленьне за кошт адрэналіну і сымпацыйнай вэгетатыўнай сыстэмы, а~вось хранічны стрэс стымулюе адклад тлушчу і зьніжэньне адчувальнасьці да інсуліну празь дзеяньне картызолу. Пры хранічным стрэсе і няўпэўненасьці ў~будучыні чалавек схільны зьядаць больш «у запас». Тэорыя «харчовай няўпэўненасьці» сьцьвярджае, што менавіта стрэс і сацыяльны статус уплываюць на ўзровень апэтыту. Пры высокім стрэсе ня раю выкарыстоўваць сур'ёзныя забароны і выяўныя абмежаваньні, высокаінтэнсіўныя трэніроўкі, бо яны могуць яшчэ больш павысіць агульны ўзровень стрэсу і прывесьці да зрыву. Для фастынгу лепей выбіраць найменш стрэсавыя дні.
+Для аптымальнага здароўя нам трэба больш карысных вострых стрэсаў, зьніжэньне ўзроўню хранічнага стрэсу і дастатковае аднаўленьне (рэляксацыя, адпачынак, сон). Востры карысны стрэс можа паляпшаць тлушчаспаленьне за кошт адрэналіну і сымпацыйнай вэгетатыўнай сыстэмы, а~вось хранічны стрэс стымулюе адклад тлушчу і зьніжэньне адчувальнасьці да інсуліну\index{інсулін} празь дзеяньне картызолу\index{картызол}. Пры хранічным стрэсе і няўпэўненасьці ў~будучыні чалавек схільны зьядаць больш «у запас». Тэорыя «харчовай няўпэўненасьці» сьцьвярджае, што менавіта стрэс і сацыяльны статус уплываюць на ўзровень апэтыту. Пры высокім стрэсе ня раю выкарыстоўваць сур'ёзныя забароны і выяўныя абмежаваньні, высокаінтэнсіўныя трэніроўкі, бо яны могуць яшчэ больш павысіць агульны ўзровень стрэсу і прывесьці да зрыву. Для фастынгу лепей выбіраць найменш стрэсавыя дні.
 
 \paragraph{Сьвятло і мэтабалічная гнуткасьць.}
-Сьвятло аказвае наўпроставае ўзьдзеяньне на галоўны цэнтар кіраваньня цыркаднымі рытмамі ў~мозгу~--- супрахіязматычнае ядро гіпаталамусу. Ёсьць 4 асноўныя правілы нармалізацыі сьветлавога рэжыму, зьвязаныя з~часам дня. Такім чынам, ранішняе сьвятло~--- вельмі важнае, нават паўгадзіны яркага сьвятла дапамогуць узбадзёрыцца, павысіць адчувальнасьць да інсуліну, палепшыць сон. Найлепшае сьвятло~--- сонечнае з~ультрафіялетам. Калі раніцай у~вас сьвятла мала~--- тае бяды: можна выкарыстоўваць прылады для фотатэрапіі, пажадана з~добрым спэктрам і яркасьцю ня менш за 10 000 люкс.
+Сьвятло аказвае наўпроставае ўзьдзеяньне на галоўны цэнтар кіраваньня цыркаднымі рытмамі\index{цыркадныя рытмы} ў~мозгу~--- супрахіязматычнае ядро\index{супрахіязматычнае ядро} гіпаталамусу\index{гіпаталамус}. Ёсьць 4 асноўныя правілы нармалізацыі сьветлавога рэжыму, зьвязаныя з~часам дня. Такім чынам, ранішняе сьвятло~--- вельмі важнае, нават паўгадзіны яркага сьвятла дапамогуць узбадзёрыцца, павысіць адчувальнасьць да інсуліну\index{інсулін}, палепшыць сон. Найлепшае сьвятло~--- сонечнае з~ультрафіялетам. Калі раніцай у~вас сьвятла мала~--- тае бяды: можна выкарыстоўваць прылады для фотатэрапіі, пажадана з~добрым спэктрам і яркасьцю ня менш за 10 000 люкс.
 
-Днём таксама важна бываць на вуліцы з~розных прычын: чым болей дзённага сьвятла, тым вышэйшы ўзровень сэратаніну, а~значыць, і самаадчуваньня, яркае сьвятло прытупляе апэтыт, сонечнае сьвятло спрыяе назапашваньню вітаміну Д. Аднак улетку і ў~гарачых краінах неабходна датрымлівацца і фотаабароны для прадухіленьня пашкоджаньня скуры. Увечары варта спыніцца на няяркім расьсеяным жаўтлявым сьвятле, ідэальна ад лямпаў напальваньня. Сьвятлодыёдныя крыніцы (смартфоны, тэлевізары, лямпы) варта абмежаваць. Як варыянт~--- можна выкарыстоўваць e-ink-рыдары для чытаньня электронных кніг або акуляры, якія блякуюць сінюю частку спэктру. Уначы~--- поўная цемра без кампрамісаў. Яна можа быць дасягнутая маскай для сну, шчыльнымі шторамі, заклейваньнем усіх магчымых індыкатараў і сьвятлодыёдаў.
+Днём таксама важна бываць на вуліцы з~розных прычын: чым болей дзённага сьвятла, тым вышэйшы ўзровень сэратаніну\index{сэратанін}, а~значыць, і самаадчуваньня, яркае сьвятло прытупляе апэтыт, сонечнае сьвятло спрыяе назапашваньню вітаміну Д. Аднак улетку і ў~гарачых краінах неабходна датрымлівацца і фотаабароны для прадухіленьня пашкоджаньня скуры. Увечары варта спыніцца на няяркім расьсеяным жаўтлявым сьвятле, ідэальна ад лямпаў напальваньня. Сьвятлодыёдныя крыніцы (смартфоны, тэлевізары, лямпы) варта абмежаваць. Як варыянт~--- можна выкарыстоўваць e-ink-рыдары для чытаньня электронных кніг або акуляры, якія блякуюць сінюю частку спэктру. Уначы~--- поўная цемра без кампрамісаў. Яна можа быць дасягнутая маскай для сну, шчыльнымі шторамі, заклейваньнем усіх магчымых індыкатараў і сьвятлодыёдаў.
 
 \tipbox{Тэмпэратура ўплывае на якасьць сну: у~прахалоднай спальні сон глыбейшы. Дасьледаваньні высьветлілі, што 2 гадзіны ў~дзень пры тэмпэратуры 17\,°C прыводзяць да страты дадатковых 110 ккал цягам тыдня, а~да канца другога тыдня ўдзельнікі губляюць ужо 290 ккал! 10-хвіліннае знаходжаньне на холадзе штодня прыводзіць да страты 3--4 кіляграмаў на месяц.}
 
 \paragraph{Тэмпэратура і мэтабалічная гнуткасьць.}
-Халадовае ўздзеяньне (цыкль «цяпло~--- холад»)~--- гэта эфэктыўны і вельмі недаацэнены спосаб узмацніць сваё здароўе. Наша цела захоўвае цыклічныя ваганьні тэмпэратуры: раніцай тэмпэратура цела павышаецца, днём падтрымліваецца, увечары зьніжаецца, ноччу мінімальная. Усе халадовыя працэдуры стымулююць работу бурага і белага тлушчаў, у~якіх адбываецца расшчапленьне зьмесьціва клетак для выпрацоўкі цяпла. Актывацыя бурага і белага тлушчаў прыводзіць ня толькі да пахудзеньня, але яшчэ мае шэраг карысных уласьцівасьцяў, такіх як зьніжэньне запаленьня, паляпшэньне адчувальнасьці да інсуліну і г.~д. Пачынаць можна з~элемэнтарнай паветранай ванны, затым працягнуць кантрасным (халодным) душам, трэніроўкамі ў~лёгкай спартовай вопратцы, паніжэньнем тэмпэратуры ўдома, сном з~прыадчыненым вакном і да т.~п. Але да ледзяной вады прыстасавацца нельга, таму экстрэмальныя маржаваньні ці наўрад прынясуць шмат карысьці.
+Халадовае ўздзеяньне (цыкль «цяпло~--- холад»)~--- гэта эфэктыўны і вельмі недаацэнены спосаб узмацніць сваё здароўе. Наша цела захоўвае цыклічныя ваганьні тэмпэратуры: раніцай тэмпэратура цела павышаецца, днём падтрымліваецца, увечары зьніжаецца, ноччу мінімальная. Усе халадовыя працэдуры стымулююць работу бурага і белага тлушчаў, у~якіх адбываецца расшчапленьне зьмесьціва клетак для выпрацоўкі цяпла. Актывацыя бурага і белага тлушчаў прыводзіць ня толькі да пахудзеньня, але яшчэ мае шэраг карысных уласьцівасьцяў, такіх як зьніжэньне запаленьня, паляпшэньне адчувальнасьці да інсуліну\index{інсулін} і г.~д. Пачынаць можна з~элемэнтарнай паветранай ванны, затым працягнуць кантрасным (халодным) душам, трэніроўкамі ў~лёгкай спартовай вопратцы, паніжэньнем тэмпэратуры ўдома, сном з~прыадчыненым вакном і да т.~п. Але да ледзяной вады прыстасавацца нельга, таму экстрэмальныя маржаваньні ці наўрад прынясуць шмат карысьці.
 
 Тут пасуе адзеньне, якое можна апісаць формулай «цёпла рухацца, холадна стаяць». Тэмпэратура ўплывае на якасьць сну, у~прахалоднай спальні сон глыбейшы. Дасьледаваньні давялі, што 2 гадзіны на дзень пры тэмпэратуры 17\,°C прыводзяць да страты дадатковых 110\,ккал на працягу тыдня, а~да канца другога тыдня ўдзельнікі губляюць ужо 290\,ккал! 10-хвіліннае знаходжаньне на холадзе штодня прыводзіць да страты 3--4 кіляграмаў на месяц.
 
@@ -112,15 +112,15 @@
 Днём карысная высокая тэмпэратура (у межах нормы), яна выдатна стымулюе і павялічвае працаздольнасьць. Таму прысяданьні ўзбадзёраць вас ня горш за кафеін. Калі вы мерзьнеце ці кепска трываеце сьпякоту, варта праверыць працу шчытавіцы, а~таксама дэфіцыт амэга-3 тлустых кіслотаў.
 
 \paragraph{Радасьць і тлушчаспаленьне.}
-Пазытыўныя эмоцыі, задавальненьне павялічваюць узровень дафаміну і паляпшаюць адчувальнасьць да інсуліну. Проста так адмовіцца ад задавальненьняў высокакалярыйнай ежы цяжка, таму знайдзіце сабе як мага болей іншых крыніц задавальненьня і радасьці! Новае хобі, натхняльныя пляны, прыемныя знаёмствы дапамогуць зьнізіць апэтыт.
+Пазытыўныя эмоцыі, задавальненьне павялічваюць узровень дафаміну\index{дафамін} і паляпшаюць адчувальнасьць да інсуліну\index{інсулін}. Проста так адмовіцца ад задавальненьняў высокакалярыйнай ежы цяжка, таму знайдзіце сабе як мага болей іншых крыніц задавальненьня і радасьці! Новае хобі, натхняльныя пляны, прыемныя знаёмствы дапамогуць зьнізіць апэтыт.
 
 \paragraph{Стрэс мяняе цела.}
-Цікава, што пры стрэсе зьмяняецца сам тып адкладу тлушчу, ён больш інтэнсіўна адкладаецца ўнутры жывата (вісцэральны тлушч), на баках («выратавальны пояс»), на грудзях, на твары і ў~«тлушчавых пастках». Без кантролю стрэсу складана дасягнуць доўгатэрміновых мэтаў у~харчаваньні.
+Цікава, што пры стрэсе зьмяняецца сам тып адкладу тлушчу, ён больш інтэнсіўна адкладаецца ўнутры жывата (вісцэральны тлушч\index{вісцэральны тлушч}), на баках («выратавальны пояс»), на грудзях, на твары і ў~«тлушчавых пастках». Без кантролю стрэсу складана дасягнуць доўгатэрміновых мэтаў у~харчаваньні.
 
 \paragraph{Гульнявыя віды спорту.}
 Пры хранічным стрэсе эфэктыўнае даданьне гульнявых відаў спорту (тэніс, футбол, баскетбол, сквош і інш.), танцаў і танцавальнага фітнэсу. Яны даюць выдатную папуску ад стомленасьці і зараджаюць энэргіяй, а~таксама міжволі залучаюць у~актыўнасьць.
 
-\tipbox{Пры стрэсе зьмяняецца сам тып адкладу тлушчу, ён больш інтэнсіўна адкладаецца ўнутры жывата (вісцэральная тлушч), на баках («выратавальны пояс»), на грудзях, на твары і ў~«тлушчавых пастках». Без кантролю стрэсу складана дасягнуць доўгатэрміновых мэтаў у~харчаваньні.}
+\tipbox{Пры стрэсе зьмяняецца сам тып адкладу тлушчу, ён больш інтэнсіўна адкладаецца ўнутры жывата (вісцэральная тлушч\index{вісцэральны тлушч}), на баках («выратавальны пояс»), на грудзях, на твары і ў~«тлушчавых пастках». Без кантролю стрэсу складана дасягнуць доўгатэрміновых мэтаў у~харчаваньні.}
 
 \paragraph{Паравіны году і мэтабалічная гнуткасьць.}
 Цалкам натуральна ўлетку, калі болей сонца, ужываць больш вугляводаў і абмяжоўваць іх узімку. Што тычыцца трэніровак, зімой можна есьці і трэніравацца менш, з~позьняй вясны і да сярэдзіны восені~--- трэніравацца і есьці больш. А~вось каб згладзіць пераходы, увесну~--- больш актыўнасьці і крыху менш ежы, а~ўвосень~--- наадварот.
